package com.album.demo.modules.album.domain.models

/**
 * Domain layer AlbumResponse DTO model to store the data
 */
data class Album(val userId: String, val id: Int, val title: String)