package com.album.demo.modules.album.infra.remote.model

/**
 * Data model representing the API response
 */
data class AlbumResponse(val userId: String, val id: String, val title: String)